# scaffolding

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
scaffolding/cli/: cli.py  constant.py  license.py  main.py  project.py  template.py
scaffolding/core/: README.md  __init__.py  blueprint.py  director.py  factory.py
scaffolding/core/adapter/: git.py  gitignore_manager.py  license_manager.py  scaffold_manager.py  system.py
scaffolding/core/adapter/package_manager/: __init__.py  package_manager.py  python.py
scaffolding/core/builders/: __init__.py  git_builder.py  language_builder.py  scaffold_builder.py
scaffolding/core/factories/: base.py
scaffolding/core/interfaces/: git.py  language.py  license.py  project.py
scaffolding/core/managers/: __init__.py  git_manager.py  package_manager.py  system.py
scaffolding/core/package_managers/: __init__.py  package_manager.py  python_package_manager.py
scaffolding/libs/: git.py  license.py  project.py
scaffolding/libs/license/: __init__.py  builders.py
scaffolding/templates/: python.toml
src/: main.rs
tests/: conftest.py  test_adapter_gitignore_manager.py  test_adapter_license_manager.py  test_adapter_package_manager.py  test_adapter_scaffold_manager.py  test_cli_project.py  test_core_director.py  test_core_factory.py  test_factories_base.py  test_interfaces_git.py  test_interfaces_language.py  test_interfaces_license.py  test_interfaces_project.py  test_libs_git.py  test_libs_license.py  test_libs_license_builders.py  test_libs_project.py
