[project]
name = "scaffolding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "gitpython>=3.1.43",
    "httpx>=0.27.2",
    "pydantic>=2.10.2",
]

[project.scripts]
project = "scaffolding.cli.project:project"
template = "scaffolding.cli.template:template"
license = "scaffolding.cli.license:license"

[tool.uv]
dev-dependencies = [
    "faker>=33.1.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
addopts = "--cov=scaffolding"
